--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,210 @@ docs/_build/
 site/
 
 # Jupyter
-.ipynb_checkpoints
+.ipynb_checkpoints/
+*.ipynb
+
+# Project-specific data files
+SCUT-FBP5500_v2.1/
+SCUT-FBP5500_v2.1.zip
+*.zip
+*.tar.gz
+*.rar
+
+# Output directories
+output/
+results/
+temp/
+tmp/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Configuration files with sensitive data
+config/database_config.py
+.env.local
+.env.production
+secrets.json
+
+# Cache files
+.cache/
+.cache_ggshield
+*.cache
+
+# Temporary files
+temp_*.jpg
+temp_*.png
+temp_*.jpeg
+*_temp.*
+
+# Evaluation results
+evaluation/results/*.json
+evaluation/results/*.csv
+evaluation/results/*.txt
+
+# Large model files
+*.pkl
+*.h5
+*.hdf5
+*.pb
+*.onnx
+*.tflite
+
+# Media files (if not needed in repo)
+*.mp4
+*.avi
+*.mov
+*.mkv
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# System files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Network files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# JetBrains
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Visual Studio Code
+.vscode/
+*.code-workspace
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# PyCharm
+.idea/
+
+# Spyder
+.spyderproject
+.spyproject
+
+# Rope
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# Local development
+local_config.py
+local_settings.py
+development.py
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+.hypothesis/
+
+# Translations
+*.mo
+*.pot
+
+# Scrapy stuff
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pipenv
+Pipfile.lock
+
+# poetry
+poetry.lock
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# Project-specific ignores
+# Add any project-specific files/folders here
