--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,10 @@ cython_debug/
 
 # Project-specific ignores
 # Add any project-specific files/folders here
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+.env.test
